--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "next-sanity": "^9.8.55",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-type-animation": "^3.2.0",
+    "resend": "^4.5.1",
     "sanity": "^3.74.1",
     "styled-components": "^6.1.15"
   },
